# QMedia

./: CMakeLists.txt  README.md  main.cpp
Modules/: CMakeLists.txt
Modules/MainWindows/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_Connections.cpp  MainWindow_Methods.cpp  MainWindow_Slots.cpp
Modules/Others/: CMakeLists.txt
Modules/Others/PhotoFullScreen/: CMakeLists.txt  PhotoFullScreen.cpp  PhotoFullScreen.h  PhotoFullScreen.ui  PhotoFullScreen_Events.cpp  PhotoFullScreen_Methods.cpp
Modules/Others/SelectionBox/: CMakeLists.txt  SelectionBox.cpp  SelectionBox.h  SelectionBox_Events.cpp  SelectionBox_Methods.cpp
Modules/Pages/: CMakeLists.txt
Modules/Pages/Credits/: CMakeLists.txt  Credits.cpp  Credits.h  Credits.ui  Credits_Connections.cpp  Credits_Methods.cpp  Credits_Slots.cpp
Modules/Pages/MediaPlayer/: CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  MediaPlayer.ui  MediaPlayer_Connections.cpp  MediaPlayer_Methods.cpp  MediaPlayer_Slots.cpp
Modules/Pages/MediaRecorder/: CMakeLists.txt  MediaRecorder.cpp  MediaRecorder.h  MediaRecorder.ui  MediaRecorder_Connections.cpp  MediaRecorder_Methods.cpp  MediaRecorder_Slots.cpp
Modules/Pages/Photo/: CMakeLists.txt  Photo.cpp  Photo.h  Photo.ui  Photo_Connections.cpp  Photo_Methods.cpp  Photo_Slots.cpp
